styles.css
body {
    margin: 0;
    padding: 0;
    display: grid;
    grid-template-columns: 1fr 5fr;
    grid-template-rows: 17vh 83vh;    
}


* {
    background-color: inherit;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'robotoregular';
}


@font-face {
    font-family: 'robotoregular';
    src: url('roboto-regular-webfont.woff2') format('woff2'),
         url('roboto-regular-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

.search,
.welcome {
    margin-left: 1rem;
}

#search {
    border-radius: 10px;
    width: 80%;
    height: 1.6rem;
    font-size: large;
}

#upload {
    --margin: 10px;
    margin-left: var(--margin);
    margin-right: var(--margin);
}

button {
    padding: 5px 15px;
    background-color: #172554;
    color: white;
    border-radius: 25px;
    font-size: 16px;
}

li {
    list-style-type: none;
}
.sidebar a {
    color: white;
}

.sidebar {
    background-color: #172554;
    color: white;
    grid-column: 1;
    grid-row: 1 / -1;
    display: grid;    
    align-content: start;
}

.sidebar h1 {
    text-align: center;
}

.nav {
    display: grid;
    grid-template-columns: 1fr 3fr;
    grid-template-rows: repeat(6, 1fr);
    justify-content: start;
    align-items: center;
}

.sidebar img {
    height: 2rem;
    justify-self: center;
}

.help {
    margin-top: 2.5rem;
    display: grid;
    grid-template-columns: 1fr 3fr;
    grid-template-rows: repeat(3, 1fr);
    align-items: center;
}

.user-info,
.header-buttons {
    justify-self: center;
}

.header {
    background-color: #eff6ff;
    grid-column: 2;
    display: grid;
    grid-template-columns: 2fr 1fr;
    align-items: center;
}

.content-wrapper {
    background-color: #bfdbfe;
    display: grid;
    grid-template-columns: 3fr 1fr;
    grid-template-rows: 1fr 1fr;
    padding: 10px;
    gap: 10px;
}

.card-wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    gap: 0.75rem;
    height: 75vh;    
}

.card {
    background-color: #eff6ff;
    border-left: 10px solid #1d4ed8;
    border-radius: 10px;
    height: 100%;
    padding: 0.75rem;
}

.content-sidebar {
    display: grid;
    grid-template-rows: 1fr 1fr;
    height: 75vh;
}

.content-sidebar-card {
    background-color: #eff6ff;
    border-radius: 10px;
    width: 100%;
    height: 100%;
}

